--- a/school_mis/attendance/templates/attendance/add_student.html
+++ b/school_mis/attendance/templates/attendance/add_student.html
@@ -39,6 +39,15 @@
                     <h4 class="mb-0">Add New Student</h4>
                 </div>
                 <div class="card-body">
+                    {% if messages %}
+                        {% for message in messages %}
+                            <div class="alert-{{ message.tags }} alert-dismissible" role="alert">
+                                {{ message }}
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                    
                     <form method="post" class="needs-validation" novalidate>
                         {% csrf_token %}
                         
